opam-version: "2.0"
name: "ocalisp"
version: "0.0.1"
synopsis: "A tiny Lisp-1 implementation"
maintainer: "yubrot <yubrot@gmail.com>"
authors: "yubrot <yubrot@gmail.com>"
license: "BSD3"
homepage: "https://github.com/yubrot/ocalisp"
bug-reports: "https://github.com/yubrot/ocalisp/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "menhir"
  "dune" {build}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/yubrot/ocalisp.git"
